fix: align header elements

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -24,15 +24,14 @@
   grid-column: 1 / 3;
 
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 2fr;
 
   .logo {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    justify-self: start;
   }
 
   .menu {
-    margin-right: 20px;
+    align-self: center;
   }
 
   .menu>ul {
